# GoPro_development

./: README.md
Linux_GoPro_demo/: BufferNegotiator.cpp  CMakeCache.txt  CMakeLists.txt  GPWNetwork.cpp  GoProStreamDemo.cpp  GoProStreamDemo.sln  GoProStreamDemo.vcxproj  GoProStreamDemo.vcxproj.filters  HTTPRequest.cpp  Makefile  UDPSocketCapture.cpp  cmake_install.cmake  demuxing_decoding.c
Linux_GoPro_demo/CMake/: FindFFMPEG.cmake
Linux_GoPro_demo/inc/: GPWNetwork.h  GoProStreamDemo.h  HTTPRequest.h  stdafx.h
